Bugfixing, reorganization, added types param
