# api/export/server/crowdsorcerer_server_export/hudi_utils/operations.py
@@ -24,33 +24,44 @@ class HudiOperations:
     UUID_MAP = {}
     UUID_MAP_COUNTER = 0
 
+    COLUMN_NAME_CONVERSION_MAP = {
+        'uuid': 'id',
+        'path_year': 'year',
+        'path_month': 'month',
+        'path_day': 'day'
+    }
+
     @classmethod
-    def get_data(cls, date_from: date=None, date_to: date=None) -> DataFrame:
+    def get_data(cls, date_from: date=None, date_to: date=None, types: str=None) -> DataFrame:
         df = cls.SPARK.read.format('hudi').load(cls.BASE_PATH)
 
         df = df.drop('ts', '_hoodie_commit_time', '_hoodie_commit_seqno', '_hoodie_record_key', '_hoodie_partition_path', '_hoodie_file_name')
 
         yesterday = date.today() - timedelta(days=1)
-        date_to = yesterday if date_to > yesterday else date_to
+        date_to = yesterday if not date_to or date_to > yesterday else date_to
 
         if date_from:
             df = df.where(f'path_year>{date_from.year} \
                 OR (path_year={date_from.year} AND path_month>{date_from.month}) \
                 OR (path_year={date_from.year} AND path_month={date_from.month} AND path_day>={date_from.day})')
         
-        if date_to:
-            df = df.where(f'path_year<{date_to.year} \
-                OR (path_year={date_to.year} AND path_month<{date_to.month}) \
-                OR (path_year={date_to.year} AND path_month={date_to.month} AND path_day<={date_to.day})')
+        df = df.where(f'path_year<{date_to.year} \
+            OR (path_year={date_to.year} AND path_month<{date_to.month}) \
+            OR (path_year={date_to.year} AND path_month={date_to.month} AND path_day<={date_to.day})')
+
+        if types:
+            types_clean = [ type_.split('_')[0] for type_ in types ]
+            columns = { column for column in df.columns if column.split('_')[0] in types_clean }
+            df = df.select( list(columns | cls.COLUMN_NAME_CONVERSION_MAP.keys()) )
 
         # Extremelly expensive, loads everything into memory!
         dfp = df.toPandas()
 
         col_uuid = dfp['uuid']
         col_uuid: Series
-                
+
         dfp['uuid'] = col_uuid.map(cls._clean_uuids)
-        dfp.rename(columns={'uuid': 'id', 'path_year': 'year', 'path_month': 'month', 'path_day': 'day'}, inplace=True)
+        dfp.rename(columns=cls.COLUMN_NAME_CONVERSION_MAP, inplace=True)
 
         return dfp
 
